Archive2/92/2d83823363d81f/output
main.cpp: In function 'int main()':
main.cpp:5:10: error: declaration of 'auto x' has no initializer
     auto x;
          ^
